--- a/assets/css/style_popup.css
+++ b/assets/css/style_popup.css
@@ -131,3 +131,13 @@
 	from { opacity: 0; }
 	to { opacity: 1; }
 }
+
+.dark-mode .popup{
+
+	background-color: #0b0f19;
+}
+.dark-mode .popup form .contenedor-inputs input{
+
+
+	background-color: #0b0f30;
+}
